--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <h1>Welcome to Codemonke.life</h1>
     <p>
-      It's my personal 😀portfolio / 📝blog / ⭐May be something cooler website
+      It's my personal 😀portfolio / 📝blog / ⭐May be something cooler
     </p>
     <p><b>- Irfan Sadek :)</b></p>
   </body>
