--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
       It's my personal 😀portfolio / 📝blog / ⭐May be something cooler
     </p>
     <p><b>- Irfan Sadek :)</b></p>
+    <img src="https://s3.us-east-2.amazonaws.com/strains.zip/test.jpg" alt="test" style="width:300px;height:300px;" />
   </body>
 </html>
